src/App.scss
@import 'assets/styles/custom';
@import '~bootstrap/scss/functions';
@import '~bootstrap/scss/variables';

a {
    text-decoration: none !important;
    color: inherit;
}
  
.container {
    max-width: 100%;
}
  
.row {
    padding: 0 1.5vw;
}

.subheading {
    font-size: 1em;
}

.heading {
    font-size: 2em;
}

table {
    font-size: 14px;
    margin: 0;
}

td, th, span {
    word-wrap: break-word; 
    overflow-wrap: break-word;
}

td, th {
    border: 1px solid rgb(185, 196, 200);
} 

.table-light tbody tr td, .table-light thead tr th {
    border: 1px solid rgb(175, 175, 175);
} 

// .table-success tbody tr td, .table-success thead tr th {
//     background-color: $table;
// }

.table-light tbody tr td, .table-light thead tr th {
    background-color: white;
}

// Topbar

.topbar div .nav-item.nav-link {
    color: black;
    font-weight: bold;
    padding: 2px 10px;
    color: $secondary;
}

.topbar div .nav-item.nav-link.active {
    background-color: $secondary;
    color: white;
}

.nav-link:hover {
    color: black;
    cursor: pointer;
}

.search-container {
    position: absolute;
    right: 0;
    top: 1px;
    width: 52vw;
}

// Sidebar


.sidebar-items {
    height: 62.5vh;
}

// .sidebar-items::-webkit-scrollbar {
//     width: 0; 
// }

.sidebar-item {
    color: rgb(77, 77, 77) !important;
    font-size: 14px;
    padding-left: 9px;
    padding-right: 9px;
    position: relative;
    margin-right: 10px;
}

.sidebar-item.active {
    background-color: $sidebar-selected !important;
    color: white !important;
    cursor: pointer;
}

.sidebar-item:hover {
    background-color: $sidebar-hover !important;
    color: white !important;
    cursor: pointer;
}

.sidebar-item.active::before {
    content: '';
    position: absolute;
    right: -9px; 
    top: 50%;
    transform: translateY(-50%);
    width: 0;
    height: 0;
    border-top: 11px solid transparent; 
    border-bottom: 11px solid transparent;
    border-left: 11px solid $sidebar-selected; 
}

.sidebar-item:hover::before {
    border-left-color: $sidebar-hover; 
}

.selectable {
    color: $selectable;
    text-decoration: underline;
}

.selectable:hover {
    color: $hover;
    cursor: pointer;
}

.selected {
    color: $selected;
    font-weight: bold;
    text-decoration: underline;
}

.clear-filters:hover {
    color: $hover;
    cursor: pointer;
}

// Alphabet

.alphabet-item:hover {
    cursor: pointer;
}

.alphabet-item-selected {
    background-color: $alphabet;
    padding: 0 8px;
    color: white;
}

// Main

.main-container {
    height: 62.5vh;
}

.main-container::-webkit-scrollbar {
    width: 3px;
}

.main-container::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
    margin: 9px 0 !important;
    border-radius: 5px;
}

.main-container::-webkit-scrollbar-thumb {
    border-radius: 5px;
    -webkit-box-shadow: inset 0 0 6px $primary; 
}

.empty-main {
    height: 300px;
}

.arrow-image {
    width: 170px;
    height: 40px;
    top: 31px;
    left: -5px;
}

.select-prompt {
    top: 52px;
    left: 157px;
}

.report-heading {
    font-size: 20px;
    color: $primary;
    padding-top: 8px;
}

.sources-list {
    font-size: 13px !important;
}

.manufacturer-table-source {
    color: $warning;
}

.manufacturer-table-source:hover {
    text-decoration: underline !important;
}

.text-selected:hover {
    text-decoration: none;
    cursor: default;
}

.text-decoration-none {
    text-decoration: none!important;
}

.hover-underline:hover, .text-warning.hover-underline:hover .fa-file-pdf {
    color: $hover!important;
    text-decoration: underline;
    cursor: pointer;
}

.read-more {
    color: $warning;
}

.read-more:hover {
    text-decoration: underline!important;
}

.last-updated {
    font-size: 11px;
}

